--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
-  "crons": [{
-    "path": "/api/update-fixtures",
-    "schedule": "0 17 * * *"  // Runs at 5:00 PM EST daily
-  }]
+  "crons": [
+    {
+      "path": "/api/update-fixtures",
+      "schedule": "0 22 * * *"  
+    }
+  ]
 } 
