--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,11 @@
       "path": "/api/update-fixtures",
       "schedule": "0 22 * * *"  
     }
+  ],
+  "builds": [
+    {
+      "src": "next.js",
+      "use": "@vercel/node@18"
+    }
   ]
 } 
